# Stonks

./: .gitignore  CMakeLists.txt  LICENSE  README.md  avParser.cpp  avParser.h  common.h  config.h  doxygen-config  stonks.cpp
.github/workflows/: main.yml
docs/: index.html
docs/html/: annotated.html  api_8h_source.html  classAPI__Request-members.html  classAPI__Request.html  classDataPoint-members.html  classDataPoint.html  classDataSet-members.html  classDataSet.html  classDate-members.html  classDate.html  classTime-members.html  classTime.html  classes.html  constant_8h_source.html  data_8h_source.html  date_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  index.html  parser_8h_source.html  time_8h_source.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_6.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_4.js  functions_5.js  functions_6.js  searchdata.js
src/: api.h  constant.h  data.h  date.h  parser.h  stonks.cpp  time.h  utils.h
